# switcheroo-control

./: .gitlab-ci.yml  NEWS  README.md  meson.build  meson_options.txt
data/: 30-discrete-gpu.rules.in  meson.build
data/scripts/: generate-hwdb.c
docs/: meson.build
src/: discrete-detection.c  discrete-detection.h  info-cleanup.c  meson.build  switcheroo-control.c  switcherooctl.in
src/discrete-detection/: amdgpu.c  meson.build  nouveau.c
tests/: integration-test  integration-test.py  meson.build
tests/discrete-detection/: libdrm_amdgpu_mock.c  libdrm_nouveau_mock.c  meson.build
